<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/wall"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_goneMarginEnd="16dp"
            app:layout_constrainedWidth="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

        <ImageView
            android:id="@+id/poster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:src="@drawable/poster"/>

        <TextView
            android:id="@+id/director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director_label"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/director_label"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintBaseline_toBaselineOf="@id/director_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constrainedWidth="true"/>
        
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title, poster, director, director"/>

        <TextView
            android:id="@+id/short_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_barrier"
            android:text="@string/short_descr"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/actors_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actors"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/short_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors_flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/actors_label"
            app:flow_wrapMode="chain"
            app:flow_firstHorizontalBias="0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_horizontalGap="8dp"
            app:flow_verticalGap="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:constraint_referenced_ids="actor1, actor2, actor3, actor4"/>



        <TextView
            android:id="@+id/actor1"
            style="@style/actor"
            android:text="@string/actor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/actor2"
            style="@style/actor"
            android:text="@string/actor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/actor3"
            style="@style/actor"
            android:text="@string/actor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/actor4"
            style="@style/actor"
            android:text="@string/actor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

